[package]
name = "redis-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.22"
rand = "0.8.5"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
